--- a/myvol/workdir/views/edit.pug
+++ b/myvol/workdir/views/edit.pug
@@ -3,14 +3,12 @@ extends layout
 block content
   h1 物品を利用予約するWebサイト
   h2 物品追加
-  form(method="post" action="/items")
+  form(method="post" action=`/items/${id}`)
     div
       h5 物品名
       input(type="text" name="name" value=name)
     div
       h5 コメント
       input(type="text" name="comment" value=comment)
-    div
-      input(type="hidden", name="id" value=id)
     div
       button(type="submit") 投稿
