--- a/myvol/workdir/views/index.pug
+++ b/myvol/workdir/views/index.pug
@@ -10,7 +10,9 @@ block content
     h4 #{item.name}
     p #{item.comment}
     div
-      a(href=`/items/${item.id}/edit`) 詳細・予約する
+      a(href=`/items/${item.id}/edit`) 物品名，コメントを編集する
+    div
+      a(href=`/items/${item.id}/reservate`) 予約する
     div
       a(href=`/items/${item.id}/delete`) 削除する
     hr
