--- a/myvol/workdir/views/layout.pug
+++ b/myvol/workdir/views/layout.pug
@@ -4,4 +4,6 @@ html
     title=title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a(href="/") ホーム
     block content
+    script(src="/javascripts/bundle.js")
