--- a/myvol/workdir/views/reservate.pug
+++ b/myvol/workdir/views/reservate.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 物品を利用予約するWebサイト
   h2 物品を予約するページ
-  form#form
+  form#form(method="post" action=`/items/${itemId}/reservate`)
     div
       h5 予約開始日時
       div#startErr.err
@@ -31,7 +31,7 @@ block content
         - for (let i = 0; i < 60; i+=15)
           option(value=`${i}`) #{i}
     div
-      input(type="hidden" value=userId)
+      input(type="hidden" name="userId" value=user.id)
 
     div#nullErr.err
 
