--- a/myvol/workdir/views/index.pug
+++ b/myvol/workdir/views/index.pug
@@ -8,17 +8,17 @@ block content
     div
       a(href="/items/new") 物品を追加する
   h3 物品一覧
-  hr
   if user
     each item in items
-      h4 #{item.name}
-      p #{item.comment}
-      div
-        a(href=`/items/${item.id}/edit`) 物品名，コメントを編集する
-      div
-        a(href=`/items/${item.id}/reservate`) 予約する
-      div
-        a(href=`/items/${item.id}/delete`) 削除する
-      hr
+      div.my-2.card(style="width: 18rem;")
+        h4 #{item.name}
+        p #{item.comment}
+        div
+          a(href=`/items/${item.id}/edit`) 物品名，コメントを編集する
+        div
+          a(href=`/items/${item.id}/reservate`) 予約する
+        div
+          a(href=`/items/${item.id}/delete`) 削除する
+
   else
     h2.err ログインしてください
