--- a/myvol/workdir/views/layout.pug
+++ b/myvol/workdir/views/layout.pug
@@ -2,7 +2,9 @@ doctype html
 html
   head
     title=title
+    meta(charset="utf-8")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous")
   body
     a(href="/") ホーム
     br
