--- a/myvol/workdir/views/reservate.pug
+++ b/myvol/workdir/views/reservate.pug
@@ -2,15 +2,24 @@ extends layout
 
 block content
   h1 物品を利用予約するWebサイト
-  h2 物品を予約するページ
+  h2 物品（#{itemId}）を予約するページ
 
-  //- table
-  //-   tr
-  //-     td(colspan="2") 00:00
-  //-     td(colspan="2") 01:00
-  //-   tr
-  //-     td
-  //-     td
+  p #{displayDay}の予約状況
+  button.m-3.btn-info 12時間前
+  button.m-3.btn-info 12時間後
+
+  table.reserveTable
+    tr
+      - let st = 0
+      - for (let i = st; i < st+24; i++)
+        - const tm = ('00' + String(i)).slice(-2);
+        th.reserveTableHeader(colspan="4") #{tm}:00
+    tr
+      - for (let i = 0; i < 24; i++)
+        td.reserveTableBoxFirst.reserveTableBox
+        td.reserveTableBoxInter.reserveTableBox
+        td.reserveTableBoxInter.reserveTableBox
+        td.reserveTableBoxLast.reserveTableBox
 
   form#form(method="post" action=`/items/${itemId}/reservate`)
     div
