--- a/myvol/workdir/views/layout.pug
+++ b/myvol/workdir/views/layout.pug
@@ -14,4 +14,4 @@ html
       a(href="/login") ログインする
     block content
 
-    script(src="/javascripts/bundle.js")
+    //- script(src="/javascripts/bundle.js")
