--- a/myvol/workdir/views/new.pug
+++ b/myvol/workdir/views/new.pug
@@ -10,5 +10,6 @@ block content
     div
       h5 コメント
       input(type="text" name="comment")
+    input(type="hidden" name="userId" value=userId)
     div
       button(type="submit") 投稿
