--- a/myvol/workdir/views/layout.pug
+++ b/myvol/workdir/views/layout.pug
@@ -12,6 +12,8 @@ html
       a(href="/logout") ログアウトする
     else
       a(href="/login") ログインする
+    h1 物品を利用予約するWebサイト
+    hr
     block content
 
     //- script(src="/javascripts/bundle.js")
