--- a/myvol/workdir/views/login.pug
+++ b/myvol/workdir/views/login.pug
@@ -9,4 +9,4 @@ block content
       h5 パスワード
       input(type="password" name="password")
     div
-      button(type="submit") 投稿
+      button(type="submit") ログイン
