--- a/myvol/workdir/views/edit.pug
+++ b/myvol/workdir/views/edit.pug
@@ -9,5 +9,6 @@ block content
     div
       h5 コメント
       input(type="text" name="comment" value=comment)
+    input(type="hidden" name="_csrf" value!=csrfToken)
     div
-      button(type="submit") 投稿
+      button(type="submit") 変更する
