--- a/myvol/workdir/views/new.pug
+++ b/myvol/workdir/views/new.pug
@@ -9,6 +9,7 @@ block content
     div
       h5 コメント
       input(type="text" name="comment")
+    input(type="hidden" name="_csrf" value!=csrfToken)
     input(type="hidden" name="userId" value=userId)
     div
       button(type="submit") 投稿
