--- a/myvol/workdir/views/reservate.pug
+++ b/myvol/workdir/views/reservate.pug
@@ -12,7 +12,7 @@ block content
     - for (let i = 0; i < 24; i++)
       option(value=`${i}`) #{i}
   | 時
-  button.m-3 表示する
+  button.m-3(disabled) 表示する(未)
 
   div.text-nowrap.table-responsive
     table.reserveTable
@@ -29,8 +29,8 @@ block content
           td.reserveTableBoxLast.reserveTableBox
 
 
-  button.btn-info 以前のタイムライン
-  button.m-3.btn-info 以後のタイムライン
+  button.btn-info(disabled) 以前のタイムライン(未)
+  button.m-3.btn-info(disabled) 以後のタイムライン(未)
 
 
   form.mt-4.card(style="width: 21rem;")#form(method="post" action=`/items/${item.id}/reservate`)
@@ -71,6 +71,7 @@ block content
     div#nullErr.err
     div#dupErr.err
 
+    input(type="hidden" name="_csrf" value!=csrfToken)
     div.m-3
       button#button(type="submit") 予約する
 
