--- a/myvol/workdir/views/userReservation.pug
+++ b/myvol/workdir/views/userReservation.pug
@@ -5,7 +5,7 @@ block content
   if reservations.length
     each reservation in reservations
       div.my-2.card(style="width: 18rem;")
-        h4 物品名
+        h4 物品ID
         p #{reservation.itemId}
         h4 予約開始時間
         p #{reservation.startTime}
@@ -13,6 +13,7 @@ block content
         p #{reservation.endTime}
         form(method='post' action=`/items/reservate/${reservation.reservationId}/delete`)
           div.text-right
+            input(type="hidden" name="_csrf" value!=csrfToken)
             button.btn-danger(type='submit') 予約を削除する
 
   else
