--- a/myvol/workdir/views/index.pug
+++ b/myvol/workdir/views/index.pug
@@ -4,7 +4,7 @@ block content
   if user
     p こんにちは #{user.name} さん
     div
-      a(href=`/users/${user.id}`) 予約一覧
+      a(href='/users') 予約一覧
     div
       a(href="/items/new") 物品を追加する
     h3 物品一覧
@@ -19,10 +19,10 @@ block content
         div
           a(href=`/items/${item.id}/reservate`) 詳細・予約する
         if user.name==='admin'
-          div
-          form(method='post' action=`/items/${item.id}/delete`)
-            input(type="hidden" name="_csrf" value!=csrfToken)
-            button.btm-danger(type='submit') 削除する
+          div.text-right
+            form(method='post' action=`/items/${item.id}/delete`)
+              input(type="hidden" name="_csrf" value!=csrfToken)
+              button.m-1.btn-danger(type='submit') 削除する
 
   else
     h2.err ログインしてください
