予約一覧で物品名を表示する

--- a/myvol/workdir/views/userReservation.pug
+++ b/myvol/workdir/views/userReservation.pug
@@ -5,8 +5,8 @@ block content
   if reservations.length
     each reservation in reservations
       div.my-2.card(style="width: 18rem;")
-        h4 物品ID
-        p #{reservation.itemId}
+        h4 物品名
+        p #{reservation.itemName}
         h4 予約開始時間
         p #{reservation.startTime}
         h4 予約終了時間
