--- a/myvol/workdir/views/new.pug
+++ b/myvol/workdir/views/new.pug
@@ -4,8 +4,9 @@ block content
   h2 物品追加
   form(method="post" action="/items")
     div
-      h5 物品名
-      input(type="text" name="name")
+      h5 物品名：
+        span(style="color:red;") 入力必須です
+      input(type="text" name="name" required)
     div
       h5 コメント
       input(type="text" name="comment")
