--- a/myvol/workdir/public/stylesheets/style.css
+++ b/myvol/workdir/public/stylesheets/style.css
@@ -24,7 +24,7 @@ a {
   font-size: 13px;
   color: gray;
   width: 60px;
-  height: 10px;
+  height: auto;
 }
 
 .reserveTableBoxFirst {
@@ -45,4 +45,13 @@ a {
   border-collapse: collapse;
   border: 1px black solid;
   border-left: 1px black dotted;
+}
+
+.tableLegend {
+  width: 15px;
+  height: 15px;
+}
+
+.tableLegendName {
+  margin-right: 200px;
 }
