指定した時間の予約バーを表示する機能の追加

--- a/myvol/workdir/views/userReservation.pug
+++ b/myvol/workdir/views/userReservation.pug
@@ -7,6 +7,8 @@ block content
       div.my-2.card(style="width: 18rem;")
         h4 物品名
         p #{reservation.itemName}
+        h4 コメント
+        p #{reservation.comment}
         h4 予約開始時間
         p #{reservation.startTime}
         h4 予約終了時間
