--- a/myvol/workdir/views/reservate.pug
+++ b/myvol/workdir/views/reservate.pug
@@ -8,16 +8,12 @@ block content
 
   h3.mt-5#reservationDay 予約状況
 
-  input#displayDay(type="date")
+  input#displayDate(type="date" name="displayDate" value=dDay)
   select#displayTime
     - for (let i = 0; i < 24; i++)
-      //- if i !== parseInt(dTime)
-      option(value=`${i}` id=`displayTimeOption${i}`) #{i}
-      //- else
-        //- option(value=`${i}` selected) #{i}
-
+      option(value=`${i}` id=`displayTimeOption${i}` name="displayTime") #{i}
   | 時
-  button.m-3(disabled) 表示する(未)
+  button#displaySpecifiedTime.m-3(type="submit" data-item-id=item.id) 表示する
 
 
 
@@ -43,7 +39,7 @@ block content
         pre 予約可　
       td.tableLegend.table-danger
       td
-        pre すでに予約あり　
+        pre 別の予約あり　
       td.tableLegend.table-active
       td
         pre 予約不可
@@ -52,8 +48,8 @@ block content
       //- div(style="width:10px; height:10px;").table-info
       //- div(style="width:10px; height:10px;").table-danger
 
-  button.btn-info(disabled) 以前のタイムライン(未)
-  button.m-3.btn-info(disabled) 以後のタイムライン(未)
+  button#displayBeforeDay.btn-info(disabled) 以前のタイムライン(未)
+  button#displayAfterDay.m-3.btn-info(disabled) 以後のタイムライン(未)
 
 
   form.mt-4.card(style="width: 21rem;")#form(method="post" action=`/items/${item.id}/reservate`)
