--- a/myvol/workdir/views/layout.pug
+++ b/myvol/workdir/views/layout.pug
@@ -13,7 +13,7 @@ html
       a(href="/logout") ログアウトする
     else
       a(href="/login") ログインする
-    h1 物品の利用予約をするWebサイト
+    h1 備品の利用予約をするWebサイト
     hr
     block content
 
