--- a/myvol/workdir/views/index.pug
+++ b/myvol/workdir/views/index.pug
@@ -6,8 +6,8 @@ block content
     div
       a(href='/users') 予約一覧
     div
-      a(href="/items/new") 物品を追加する
-    h3 物品一覧
+      a(href="/items/new") 備品を追加する
+    h3 備品一覧
 
     each item in items
       div.my-2.card(style="width: 18rem;")
@@ -15,7 +15,7 @@ block content
         p #{item.comment}
         if user.name==='admin' || user.id === item.createdBy
           div
-            a(href=`/items/${item.id}/edit`) 物品名，コメントを編集する
+            a(href=`/items/${item.id}/edit`) 備品名，コメントを編集する
         div
           a(href=`/items/${item.id}/reservate`) 詳細・予約する
         if user.name==='admin'
