--- a/myvol/workdir/views/userReservation.pug
+++ b/myvol/workdir/views/userReservation.pug
@@ -5,7 +5,7 @@ block content
   if reservations.length
     each reservation in reservations
       div.my-2.card(style="width: 18rem;")
-        h4 物品名
+        h4 備品名
         p #{reservation.itemName}
         h4 コメント
         p #{reservation.comment}
