予約完了ページの作成

--- a/myvol/workdir/views/reservation_failed.pug
+++ b/myvol/workdir/views/reservation_failed.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div.alert.alert-success.text-center
-    h4 予約が完了しました！
+  div.alert.alert-danger.text-center
+    h4 予約が失敗しました
     u
       a(href='/').alert-link ホームに戻る
