--- a/myvol/workdir/views/index.pug
+++ b/myvol/workdir/views/index.pug
@@ -20,9 +20,13 @@ block content
           a(href=`/items/${item.id}/reservate`) 詳細・予約する
         if user.name==='admin'
           div.text-right
-            form(method='post' action=`/items/${item.id}/delete`)
+            form#deleteItem(method='post' action=`/items/${item.id}/delete`)
               input(type="hidden" name="_csrf" value!=csrfToken)
               button.m-1.btn-danger(type='submit') 削除する
 
   else
     h2.err ログインしてください
+
+
+  script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+  script(src="/javascripts/bundle.js")
